fix small tag spacing on mobile

--- a/src/components/TagGroup/tag-group.scss
+++ b/src/components/TagGroup/tag-group.scss
@@ -8,11 +8,6 @@
       margin-top: 0;
     }
   }
-  .padded-tablet {
-    @include tablet {
-      padding-left: 15px;
-    }
-  }
   .tag {
     margin-top: 2px;
     @include tablet {
